--- a/.github/workflows/(manual) write readme.yml
+++ b/.github/workflows/(manual) write readme.yml
@@ -1,12 +1,9 @@
-name: (scheduled) download statistics
+name: (manual) write readme
+on: 
+  workflow_dispatch:
 env:
   github_token: ${{ secrets.GITHUB_TOKEN }}
   CUR_REPO: ${{ github.repository }}
-on: 
-  schedule: 
-    - cron: '30 23 * * *' 
-    # runs at 23:30 utc every day
-    # minute(0-59) / hour(0-23) / day of month(1-31) / month(1-12) / day of week(0-6)
 jobs:
   First:
     name: gather statistics
@@ -16,15 +13,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
-      - name: write statistics file
-        run: python res/src/download_statistics.py
-      - name: write readme
+      - name: write statistics
         run: python res/src/write_readme.py
       - name: Commit file
         run: |
           git config user.name "script" 
           git config user.email "<>"
-          git add 'res/dl_log/' 'README.md'
+          git add 'README.md'
           git commit -m "dl log written" || true
       - name: Push changes
         uses: ad-m/github-push-action@master
