--- a/.github/workflows/(manual) write readme.yml
+++ b/.github/workflows/(manual) write readme.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
+      - name: install libs
+        run: |
+          python3 -m pip install Pillow
       - name: write statistics
         run: python res/src/write_readme.py
       - name: Commit file
