--- a/.github/workflows/(manual) write readme.yml
+++ b/.github/workflows/(manual) write readme.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           git config user.name "script" 
           git config user.email "<>"
-          git add 'README.md'
+          git add .
           git commit -m "dl log written" || true
       - name: Push changes
         uses: ad-m/github-push-action@master
