Update (scheduled) download statistics.yml

--- a/.github/workflows/(scheduled) download statistics.yml
+++ b/.github/workflows/(scheduled) download statistics.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           git config user.name "script" 
           git config user.email "<>"
-          git add 'res/dl_log/'
+          git add .
           git commit -m "dl log written" || true
       - name: Push changes
         uses: ad-m/github-push-action@master
