--- a/.github/workflows/(scheduled) download statistics.yml
+++ b/.github/workflows/(scheduled) download statistics.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           git config user.name "script" 
           git config user.email "<>"
-          git add 'README.md'
+          git add .
           git commit -m "README written" || true
       - name: Push changes
         uses: ad-m/github-push-action@master
