--- a/.github/workflows/(manual) download statistics.yml
+++ b/.github/workflows/(manual) download statistics.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           git config user.name "script" 
           git config user.email "<>"
-          git add 'res/dl_log/' 'README.md'
+          git add .
           git commit -m "dl log written" || true
       - name: Push changes
         uses: ad-m/github-push-action@master
